initial commit with my own changes, changed main img and icon

--- a/css/jquery.fancybox.css
+++ b/css/jquery.fancybox.css
@@ -26,8 +26,8 @@
 
 .fancybox-skin {
 	position: relative;
-	background: #f9f9f9;
-	color: #444;
+	background: #c2adcf;
+	color: #c2adcf;
 	text-shadow: none;
 	-webkit-border-radius: 4px;
 	   -moz-border-radius: 4px;
