Removed instagram, changed some content.

--- a/css/queries.css
+++ b/css/queries.css
@@ -278,7 +278,7 @@
         text-transform: uppercase;
         padding: 20px 0;
         display: block;
-        border-bottom: dashed 1px #4E566C;
+        border-bottom: dashed 1px #2b4385;
     }
 
     footer ul.footer-group li {
