--- a/css/queries.css
+++ b/css/queries.css
@@ -65,7 +65,7 @@
     }
 
     nav ul li a {
-        color: #fff;
+        color: #8fa0c7;
         font-size: 25px;
         text-transform: uppercase;
         font-weight: 600;
