--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -22,8 +22,8 @@ $h2-color: #3D4351;
 $h3-color: #3D4351;
 $h5-color: #3D4351;
 // Layout colours
-$section-light: #fff;
-$section-dark: #f8f9fd;
+$section-light: #8fa0c7;
+$section-dark: #8fa0c7  ;
 $to-top-bg: #495061;
 $footer-primary: #3D4351;
 $footer-secondary: #373D4A;
