--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -97,7 +97,7 @@ section .header {
 .tooltip-inner {
   max-width: 200px;
   padding: 3px 8px;
-  color: #fff;
+  color: #8fa0c7;
   text-align: center;
   text-decoration: none;
   text-transform: capitalize;
