--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -4,7 +4,7 @@
 // Fonts
 
 $sans-serif: 'Open Sans', sans-serif;
-$serif: Merriweather, Georgia, 'Times New Roman', serif;
+$serif:  Georgia, 'Times New Roman', serif;
 $accent-font: 'Nunito', sans-serif;
 
 // Weights
