--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -7,13 +7,13 @@ $txt-secondary: #3D4351;
 // heading font
 $txt-light: #fff;
 // header/hero
-$txt-accent: #ACB1B4;
+$txt-accent: #45494b;
 $form-placeholder: #BCC1C3;
 // form placeholder text
 // Global colours
-$accent-color: #e8ca6f;
+$accent-color: #c59f2d;
 // global accent colour
-$accent-color-hover: #d3b56a;
+$accent-color-hover: #cfa230;
 // global accent colour hover
 $white-color: #fff;
 $black-color: #000;
