--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -3,12 +3,12 @@
 // Text colours
 $txt-primary: rgba(28, 54, 83, 0.6);
 // body font
-$txt-secondary: #3D4351;
+$txt-secondary: #2d313b;
 // heading font
 $txt-light: #fff;
 // header/hero
 $txt-accent: #45494b;
-$form-placeholder: #BCC1C3;
+$form-placeholder: #686d6e;
 // form placeholder text
 // Global colours
 $accent-color: #c59f2d;
