--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -1,13 +1,13 @@
 // Colours partial
 
-// Text colours
+//Text colours
 $txt-primary: rgba(28, 54, 83, 0.6);
 // body font
 $txt-secondary: #2d313b;
 // heading font
 $txt-light: #fff;
 // header/hero
-$txt-accent: #45494b;
+$txt-accent: #1f2122;
 $form-placeholder: #686d6e;
 // form placeholder text
 // Global colours
